Simplify update pom.xml dependencies and simplify test exclusions.